# Firmware_Gtiny

app_nn/: CMakeLists.txt  log_info.csv  sdkconfig  teste.c
app_nn/components/controllers/: CMakeLists.txt  i2c.c  i2c.h  i2s_controller.c  i2s_controller.h
app_nn/components/drivers/: CMakeLists.txt  RSA.c  acc.c  acc.h  acc_lis3dh.c  acc_lis3dh.h  eeprom.c  eeprom.h  infrareds.c  infrareds.h  mcp.c  mcp.h  mic.c  mic.h  sensorUltrassonico.c  sensorUltrassonico.h  serialUart.c  serialUart.h
app_nn/components/esp-dsp/modules/iir/biquad/: dsps_biquad_f32_ansi.c
app_nn/components/esp-dsp/modules/iir/include/: dsps_biquad.h
app_nn/components/model/: CMakeLists.txt  constants.cc  constants.h  main_functions.cc  main_functions.h  model.cc  model.h  output_handler.cc  output_handler.h  policy.cpp  policy.h
app_nn/components/sensors/: CMakeLists.txt  manager.c  manager.h  sensors.c  sensors.h
app_nn/components/storage/: CMakeLists.txt  storage.c  storage.h
app_nn/components/tfmicro/: CMakeLists.txt
app_nn/main/: CMakeLists.txt  main.c
rs232_support/: emulator.py  emulator_test.py  log_info.csv  tempCodeRunnerFile.py  teste.txt
